Fix wrapping of key icon on Firefox Android
See https://github.com/c-w/boardgames/issues/8

--- a/src/frontend/boards/fitf/index.scss
+++ b/src/frontend/boards/fitf/index.scss
@@ -589,5 +589,15 @@ $black: #000;
     input[type="checkbox"] {
       visibility: hidden;
     }
+
+    .card {
+      &.key {
+        .content {
+          .suit:before {
+            display: inline-block;
+          }
+        }
+      }
+    }
   }
 }
